--- a/app/src/main/res/layout/news_details.xml
+++ b/app/src/main/res/layout/news_details.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
@@ -28,13 +28,11 @@
                     app:cardCornerRadius="10dp">
 
                     <ImageView
+                        android:id="@+id/setImage"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/news"/>
-
+                        android:layout_height="match_parent"/>
 
                 </androidx.cardview.widget.CardView>
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
